--- a/package.json
+++ b/package.json
@@ -7,5 +7,12 @@
   },
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "ws": "^8.8.0",
+    "express": "^4.18.2",
+    "body-parser": "^1.20.1",
+    "cors": "^2.8.5",
+    "socket.io": "^4.5.1"
+  }
 }
